--- a/index.html
+++ b/index.html
@@ -1,11 +1,1 @@
-<!DOCTYPE html>
-<html lang="ru">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>inde</title>
-</head>
-<body>
-    <script>document.location.replace("main.php");</script>
-</body>
-</html>
+Hello html
